# cc_tools

./: .gitignore  CC_UNDERSCORE_MIGRATION_TRACKING.md  CHANGELOG.md  CONTRIBUTING.md  README.md  RENAME_MIGRATION.md  pytest.ini
.claude-plugin/: marketplace.json  plugin.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  release.yml
docs/: CC_TOOLS.md  CodingStyle.md  HANDOVER.md  IMPLEMENTATION_PLAN.md  PLAN_token_consolidation.md  PRD-cc-excel.md  PRD-cc-word.md  TESTING.md  cc-browser-human-mode-captcha-plan.md  cc-browser-human-mode-captcha.md  cc-markdown_PRD.md  cc-tools-improvements.md  cc-tools-strategy.md  cc-tools.md  cc-vault-migration-plan.md  cc-vault_migration_plan.md  plan-token-consolidation.md  relocation-plan.md  workspace-migration.md
docs/audits/: cc-crawl4ai_audit.md  cc-gmail_audit.md  cc-linkedin_audit.md  cc-outlook_audit.md  cc-reddit_audit.md  cc-whisper_audit.md  cc-youtube-info_audit.md  cc_gmail_audit.md
docs/site/: getting-started.html  index.html
scripts/: build.bat  install.bat  install.ps1  install.sh  migrate-location.bat  migrate_config.bat  run-tests.bat
skills/cc-brandingrecommendations/: SKILL.md
skills/cc-browser/: SKILL.md
skills/cc-click/: SKILL.md
skills/cc-comm-queue/: SKILL.md
skills/cc-computer/: SKILL.md
skills/cc-crawl4ai/: SKILL.md
skills/cc-docgen/: SKILL.md
skills/cc-excel/: SKILL.md
skills/cc-gmail/: SKILL.md
skills/cc-hardware/: SKILL.md
skills/cc-image/: SKILL.md
skills/cc-linkedin/: SKILL.md
skills/cc-markdown/: SKILL.md
skills/cc-outlook/: SKILL.md
skills/cc-photos/: SKILL.md
skills/cc-powerpoint/: SKILL.md
skills/cc-reddit/: SKILL.md
skills/cc-setup/: SKILL.md
skills/cc-tools/: SKILL.md
skills/cc-transcribe/: SKILL.md
skills/cc-trisight/: SKILL.md
skills/cc-vault/: SKILL.md
skills/cc-video/: SKILL.md
skills/cc-voice/: SKILL.md
skills/cc-websiteaudit/: SKILL.md
src/cc-docgen/: README.md  __init__.py  __main__.py  build.ps1  cli.py  generator.py  pyproject.toml
src/cc-docgen/test/fixtures/: README.md
src/cc-docgen/test/fixtures/input/: invalid_yaml.yaml  minimal_manifest.yaml  valid_manifest.yaml
src/cc-docgen/tests/: test_schema.py
src/cc-excel/: main.py  (+6 more)
src/cc-gmail/: README.md  cc-gmail.spec  cc-gmail_auth.bat  main.py  pyproject.toml  requirements.txt
src/cc-gmail/docs/: shitty-google-problems.md
src/cc-gmail/src/: __init__.py  __main__.py  auth.py  calendar_api.py  cli.py  contacts_api.py  gmail_api.py  imap_client.py  smtp_client.py  utils.py
src/cc-gmail/test/fixtures/: README.md
src/cc-gmail/tests/: __init__.py  test_gmail_api.py  test_utils.py
src/cc-markdown/: build.ps1  build.sh  cc-markdown.spec  main.py  pyproject.toml  requirements.txt
src/cc-markdown/samples/: api-docs.md  meeting-notes.md  report.md
src/cc-markdown/samples/output/: api-docs-terminal.html  meeting-notes-obsidian.html  report.docx
src/cc-markdown/src/: __init__.py  __main__.py  cli.py  html_generator.py  parser.py  pdf_converter.py  word_converter.py
src/cc-markdown/src/themes/: __init__.py  base.css  blueprint.css  boardroom.css  obsidian.css  paper.css  spark.css  terminal.css  thesis.css
src/cc-markdown/test/fixtures/: README.md
src/cc-markdown/test/fixtures/input/: report.md
src/cc-markdown/tests/: __init__.py  test_html.py  test_parser.py
src/cc-markdown/tests/fixtures/: sample.md
src/cc-personresearch/: README.md  build.ps1  main.py  pyproject.toml  requirements.txt
src/cc-personresearch/src/: aggregator.py  browser_client.py  cli.py  models.py  runner.py
src/cc-personresearch/src/sources/: base.py  company_website.py  fec_donations.py  github_search.py  google_dorking.py  gravatar.py  linkedin.py  nuwber.py  opencorporates.py  sec_edgar.py  thatsthem.py  truepeoplesearch.py  wayback.py  whois_lookup.py  zabasearch.py
src/cc-photos/: README.md  main.py  pyproject.toml  requirements.txt
src/cc-photos/.claude/sounds/: .current_session
src/cc-photos/src/: __init__.py  __main__.py  analyzer.py  cli.py  database.py  duplicates.py  metadata.py  scanner.py
src/cc-photos/test/fixtures/: README.md
src/cc-photos/tests/: test_photos.py
src/cc-powerpoint/: README.md  build.ps1  build.sh  cc-powerpoint.spec  main.py  pyproject.toml  requirements.txt
src/cc-powerpoint/samples/: quarterly-report.md  quarterly-report.pptx
src/cc-powerpoint/src/: __init__.py  __main__.py  cli.py  parser.py  pptx_generator.py
src/cc-powerpoint/src/themes/: __init__.py
src/cc-powerpoint/test/fixtures/: README.md
src/cc-powerpoint/tests/: test_generator.py  test_parser.py
src/cc-reddit/: PRD.md  README.md  pyproject.toml
src/cc-reddit/src/: __init__.py  __main__.py  browser_client.py  cli.py  models.py  selectors.py
src/cc-reddit/test/fixtures/: README.md
src/cc-reddit/tests/: __init__.py  test_cli.py
src/cc_comm_queue/: README.md  build.ps1  pyproject.toml
src/cc_comm_queue/src/: __init__.py  cli.py  schema.py
src/cc_comm_queue/tests/: __init__.py
src/cc_hardware/: pyproject.toml
src/cc_image/: pyproject.toml
src/cc_outlook/: README.md  build.ps1  pyproject.toml  requirements.txt
src/cc_outlook/docs/: AUTHENTICATION.md  IMPLEMENTATION_NOTES.md
src/cc_outlook/src/: auth.py  cli.py
src/cc_shared/: README.md  __init__.py  config.py  llm.py  pyproject.toml
src/cc_shared/providers/: __init__.py
src/cc_shared/test/fixtures/: README.md
src/cc_shared/test/fixtures/expected/: config_defaults.json  config_full_roundtrip.json
src/cc_shared/test/fixtures/input/: config_corrupted.json  config_minimal.json
src/cc_shared/tests/: test_config.py  test_llm.py
src/cc_vault/: build.ps1  pyproject.toml
src/cc_vault/src/: cli.py  config.py  db.py  fuzzy_search.py  importer.py
src/cc_video/: cc_video.spec  pyproject.toml
src/cc_voice/: pyproject.toml
src/cc_whisper/: pyproject.toml
src/cc_youtube_info/: README.md  build.ps1  pyproject.toml
src/cc_youtube_info/src/: __init__.py  cli.py  youtube.py
src/cc_youtube_info/tests/: test_subtitle_parser.py
(+490 files in other folders)
