[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cc-powerpoint"
version = "0.1.0"
description = "Convert Markdown to PowerPoint presentations with beautiful themes"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "CenterConsulting Inc.", email = "info@centerconsulting.com"}
]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
]
keywords = ["markdown", "powerpoint", "pptx", "presentation", "slides", "cli"]
dependencies = [
    "markdown-it-py>=3.0.0",
    "mdit-py-plugins>=0.4.0",
    "python-pptx>=1.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pyinstaller>=6.0.0",
]

[project.scripts]
cc-powerpoint = "src.cli:app"

[project.urls]
Homepage = "https://github.com/CenterConsulting/cc-tools"
Documentation = "https://github.com/CenterConsulting/cc-tools/tree/main/src/cc-powerpoint"
Repository = "https://github.com/CenterConsulting/cc-tools"
Issues = "https://github.com/CenterConsulting/cc-tools/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
