[project]
name = "cc-hardware"
version = "1.0.0"
description = "System hardware information CLI"
requires-python = ">=3.11"
dependencies = [
    "psutil>=5.9.0",
    "GPUtil>=1.4.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.scripts]
cc-hardware = "src.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
