[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cc-image"
version = "0.1.0"
description = "Unified image toolkit: generate, analyze, OCR, resize, convert"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "CenterConsulting Inc.", email = "info@centerconsulting.com"}]
requires-python = ">=3.11"
keywords = ["image", "resize", "convert", "ocr", "dalle", "vision", "ai"]
dependencies = [
    "pillow>=10.0.0",
    "requests>=2.28.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "pyinstaller>=6.0.0"]

[project.scripts]
cc-image = "src.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
