[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cc-outlook"
version = "0.1.0"
description = "Outlook CLI: read, send, search emails and manage calendar from the command line"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "CenterConsulting Inc.", email = "info@centerconsulting.com"}]
requires-python = ">=3.11"
keywords = ["outlook", "email", "cli", "microsoft", "graph", "api", "calendar"]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "O365>=2.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "pyinstaller>=6.0.0"]

[project.scripts]
cc-outlook = "src.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
