[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cc_shared"
version = "0.1.0"
description = "Shared configuration and LLM abstraction for cc_tools"
license = {text = "MIT"}
authors = [{name = "CenterConsulting Inc.", email = "info@centerconsulting.com"}]
requires-python = ">=3.11"
keywords = ["configuration", "llm", "shared"]
dependencies = [
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]

[tool.setuptools]
packages = ["cc_shared", "cc_shared.providers"]
package-dir = {"cc_shared" = "."}
