[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cc-voice"
version = "0.1.0"
description = "Text-to-speech using OpenAI TTS"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "CenterConsulting Inc.", email = "info@centerconsulting.com"}]
requires-python = ">=3.11"
keywords = ["tts", "text-to-speech", "audio", "openai"]
dependencies = [
    "openai>=1.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "pyinstaller>=6.0.0"]

[project.scripts]
cc-voice = "src.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
