[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cc-whisper"
version = "0.1.0"
description = "Audio transcription using OpenAI Whisper"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "CenterConsulting Inc.", email = "info@centerconsulting.com"}]
requires-python = ">=3.11"
keywords = ["whisper", "transcription", "audio", "speech-to-text", "openai"]
dependencies = [
    "openai>=1.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "pyinstaller>=6.0.0"]

[project.scripts]
cc-whisper = "src.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
