[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cc_youtube_info"
version = "0.2.0"
description = "Extract transcripts, metadata, and information from YouTube videos"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "CenterConsulting Inc.", email = "info@centerconsulting.com"}]
requires-python = ">=3.11"
keywords = ["youtube", "transcript", "subtitles", "captions", "cli", "yt-dlp", "metadata", "chapters"]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "yt-dlp>=2024.0.0",
    "youtube-transcript-api>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "pyinstaller>=6.0.0"]

[project.scripts]
cc_youtube_info = "src.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
